--- a/packageManifest.json
+++ b/packageManifest.json
@@ -1,48 +1,48 @@
 {
-  "packageName": "hubitat-luxor",
-  "author": "Russ Goldin",
-  "version": "1.0",
+  "packageName": "Luxor Lighting Controller",
+  "author": "Russell Goldin",
+  "version": "1.0.0",
   "minimumHEVersion": "2.1.9",
   "dateReleased": "2020-08-03",
   "apps": [
     {
-      "id": "ba03c6c4-bd68-44a5-a0e4-eb5c13a92f55",
-      "name": "",
-      "namespace": "",
-      "location": "https://raw.githubusercontent.com/tagyoureit/hubitat-luxor/master/smartapps/tagyoureit/luxor.src/luxor.groovy",
+      "id": "8fa2fabc-4e2c-4e34-b150-606497300e98",
+      "name": "Luxor",
+      "namespace": "tagyoureit",
+      "location": "https://raw.githubusercontent.com/tagyoureit/hubitat-luxor/master/Apps/Luxor/luxor.groovy",
       "required": true,
       "oauth": false,
-      "primary": false
+      "primary": true
     }
   ],
   "drivers": [
     {
-      "id": "e1157cd4-b9e1-4f71-b42c-503435ca2e22",
-      "name": "",
-      "namespace": "",
-      "location": "https://raw.githubusercontent.com/tagyoureit/hubitat-luxor/master/devicetypes/tagyoureit/luxor-controller.src/luxor-controller.groovy",
-      "required": true
+      "id": "89766b88-b73d-482d-bf09-0c06c05e6e6f",
+      "name": "Luxor Theme",
+      "namespace": "tagyoureit",
+      "location": "https://raw.githubusercontent.com/tagyoureit/hubitat-luxor/master/Drivers/Luxor/luxor-theme.groovy",
+      "required": false
     },
     {
-      "id": "1ae00087-615f-4fff-8fa0-f0c17da18711",
-      "name": "",
-      "namespace": "",
-      "location": "https://raw.githubusercontent.com/tagyoureit/hubitat-luxor/master/devicetypes/tagyoureit/luxor-color-group.src/luxor-color-group.groovy",
-      "required": true
-    },
-    {
-      "id": "3dd60cc5-6d81-4914-92d2-732768dcd51d",
+      "id": "8849172a-993a-40f9-a509-486877a2cab6",
       "name": "Luxor Monochrome Group",
       "namespace": "tagyoureit",
-      "location": "https://raw.githubusercontent.com/tagyoureit/hubitat-luxor/master/devicetypes/tagyoureit/luxor-monochrome-group.src/luxor-monochrome-group.groovy",
-      "required": true
+      "location": "https://raw.githubusercontent.com/tagyoureit/hubitat-luxor/master/Drivers/Luxor/luxor-monochrome-group.groovy",
+      "required": false
     },
     {
-      "id": "b9d04dfa-4054-44b4-bb36-4580dc36c461",
-      "name": "",
-      "namespace": "",
-      "location": "https://raw.githubusercontent.com/tagyoureit/hubitat-luxor/master/devicetypes/tagyoureit/luxor-theme.src/luxor-theme.groovy",
-      "required": true
+      "id": "e7c24b53-8fd1-403c-8589-0c744e566252",
+      "name": "Luxor Color Group",
+      "namespace": "tagyoureit",
+      "location": "https://raw.githubusercontent.com/tagyoureit/hubitat-luxor/master/Drivers/Luxor/luxor-color-group.groovy",
+      "required": false
+    },
+    {
+      "id": "7dc2c810-e66a-4032-9710-714a01b4773f",
+      "name": "Luxor Controller",
+      "namespace": "tagyoureit",
+      "location": "https://raw.githubusercontent.com/tagyoureit/hubitat-luxor/master/Drivers/Luxor/luxor-controller.groovy",
+      "required": false
     }
   ]
 }
